--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
 
             <div class="config-group">
-                <span class="config-label">Blanks</span>
+                <span class="config-label">Buffer Blanks</span>
                 <label class="switch">
                     <input type="checkbox" id="blankToggle">
                     <span class="slider"></span>
@@ -259,14 +259,14 @@
             </div>
 
             <div class="config-group cmd-only">
-                <span class="config-label">Aux</span>
+                <span class="config-label">Aux Buffer</span>
                 <label class="switch">
                     <input type="checkbox" id="auxToggle">
                     <span class="slider"></span>
                 </label>
             </div>
             <div class="config-group cmd-only">
-                <span class="config-label">Bio-Av</span>
+                <span class="config-label">Biotin-Avidin</span>
                 <label class="switch">
                     <input type="checkbox" id="bioToggle">
                     <span class="slider"></span>
@@ -981,4 +981,5 @@
         init();
     </script>
 </body>
+
 </html>
